# nba-pythaogrean-wins

./: Dockerfile  LICENSE  README.md  pyproject.toml
app/: main.py
