[tool.poetry]
name = "nba-pythaogrean-wins"
version = "0.1.0"
description = "Poetry specification for library dependencies"
authors = ["Kyle Clark <github.com/devcultivation>"]

[tool.poetry.dependencies]
beautifulsoup4 = "~4.9.3"
lxml = "~4.4.1"
python = "~3.9"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"